{
    "name": "MainControls",
    "maps": [
        {
            "name": "Phone",
            "id": "663f9633-273c-4700-85d6-6bd614794185",
            "actions": [
                {
                    "name": "ToggleHold",
                    "type": "Button",
                    "id": "424ba70b-a9d6-4213-b793-a0359c08e8c6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8fc75276-cd89-4fae-a606-cc7cb8d01f1f",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "ToggleHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Title",
            "id": "ae7f7f2c-f85c-4e63-a039-5f0ebbcaa12a",
            "actions": [
                {
                    "name": "SelectionDown",
                    "type": "Button",
                    "id": "a53160a7-5e58-4651-b8fb-fb35068dbdd9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectionUp",
                    "type": "Button",
                    "id": "9bdaad18-4624-4ae1-8b1f-7f5474a1bf57",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "6a33d018-060a-4aa2-89d4-80188537300f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2cd07808-ad57-4e91-ab79-d4d775379e31",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "SelectionDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f2caa61-f7fc-4d49-aa41-83920ca3842e",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "SelectionUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ad79cc5-68b3-4318-96f8-bf8e7248e8f8",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player",
            "id": "4ff59729-2ac2-447a-9820-e93fac1f02a8",
            "actions": [
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "9917b12b-7f87-4721-9e27-7b328d94bf20",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "64a7e3a6-5146-4ef2-86c8-5b0be7c398d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "cded1422-7717-4b17-ab04-c6b37cebf3c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "c54f9f70-93f8-4c2d-b06a-1600b622517c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fb1f3c39-fcb2-4b2d-8a1c-a59dec2ba648",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80489264-8993-48e5-822b-81ff052148d5",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38b3adcf-a118-4277-a402-d0b82037e9e7",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc50af8d-cbe1-4c30-ae9c-84167ef17551",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard/Mouse",
            "bindingGroup": "Keyboard/Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}